<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#6869C5">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6869C5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#2196F3"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/head"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchlang"
            android:layout_width="120dp"
            android:layout_height="15dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="40dp"
            android:text="@string/lang"
            android:textColor="#FF9800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editText1"
                android:layout_width="312dp"
                android:layout_height="38dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/shape"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/principle"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="316dp"
                android:layout_height="42dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/rate"
                android:inputType="numberSigned" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/year" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/month" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/day" />
            </RadioGroup>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="316dp"
                android:layout_height="42dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/time"
                android:inputType="numberSigned" />


            <Button
                android:id="@+id/calculateBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#2196F3"
                android:text="@string/calculate"
                android:textColor="#fff" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/progress"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/layoutt"
                    android:visibility="gone">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/si"
                    android:textColor="#ffff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FBFBF6"
                    android:text="0.000000000000000"
                    android:textAlignment="textEnd"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/total"
                    android:textColor="#ffff"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shape"
                    android:backgroundTint="#FBFBF6"
                    android:text="0.000000000000000"
                    android:textAlignment="textEnd"
                    android:textSize="20dp" />

                </LinearLayout>
            </FrameLayout>

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:text="@string/reset"
                android:visibility="gone"
                android:textColor="#ffff" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>